# mycommonrepo

./: .00E050.py.3434210736~  .breakpoints  .gitattributes  .gitignore  .main.py.1321869881~  00E000.py  00E024.py  00E025.py  00E026.py  00E027.py  00E028.py  00E031.py  00E033.py  00E035.py  00E038.py  00E039.py  00E043.py  00E044.py  00E046.py  00E047.py  00E048.py  00E049.py  00E050.py  00E051.py  00E052.py  00E053.py  00E054.py  00E055.py  00E056.py  00E057.py  00E058.py  00E059.py  00E060.py  00E061.py  00E062.py  00E063.py  00E064.py  00E065.py  00E066.py  00E067.py  (+156 more)
bashscript/: E027.sh  E028.sh  E028a.sh  E028a_rpl.sh  E029.sh  E029a.sh  E032.sh  E033.sh  E034.sh  E035.sh  inE028a_rpl.txt  inE029.txt  inE033.txt  inE034.txt  inE035.txt  input_data_rpl.txt  outE028a.txt  outE029.txt  outE030.txt  outE033.txt  outE034.txt  outE035.txt  output_data.txt
classicprob/: fibonnacci (solved).py  fibonnacci.py
leetcode/: 00LC003.py  00LC0151.py  00LC0238.py  00LC0334.py  00LC0605.py  00LC1071.py  00LC1071_gen.py  00LC1768.py
myproject/: P000.py  P001-nopanda.py  P001.py  P002-panda.py  P003.py  output.txt  samplecode.py
pico_codes/: buzzer.py  running_led.py
pythonwb_dict/: E128_test.py  E130_test.py  E131_test.py  E132_test.py  E137_test.py  E138_test.py  E139_test.py  E140_test.py
pythonwb_file/: E142_test.py  E143_test.py  E144._test.py  E145_test.py  E146_test.py  E147_test.py  E148_test.py  E149_test.py  E151_test.py  E152_test.py  E153_test.py  E154_test.py  E157_test.py  E158_test.py  E159_test.py  E160_test.py  E161_test.py  E162_test.py  E163_test.py
(+181 files in other folders)
