[tool.poetry]
name = "repl_nix_mycommonrepo"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
adafruit-circuitpython-hid = "^5.3.3"
matplotlib = "^3.6.3"
Pillow = "^9.4.0"
PyAutoGUI = "^0.9.53"
pygame = "^2.1.2"
speedtest-cli = "^2.1.3"
requests = "^2.28.2"
bs4 = "^0.0.1"
facebook-sdk = "^3.1.0"
numpy = "^1.24.1"
Adafruit-Blinka = "^8.11.0"
fastapi = "^0.89.1"
pytube = "^12.1.2"
pandas = "^1.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
